--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vscode/webview-ui-toolkit": "^1.0.0",
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
+    "octokit": "^1.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
