--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@monaco-editor/react": "^4.4.5",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.4",
+    "@octokit/rest": "^19.0.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -16,6 +17,7 @@
     "@vscode/webview-ui-toolkit": "^1.0.0",
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
+    "firebase": "^9.9.1",
     "octokit": "^1.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
